<resources>
    <string name="app_name">myCalculator</string>
    <string name="title_calculator">Calculator</string>
    <string name="hint_value1">Enter Value 1</string>
    <string name="hint_value2">Enter Value 2</string>
    <string name="btn_sum">SUM</string>
    <string name="txt_result">Result</string>
    <string name="err_enter_values">Please enter both numbers</string>
    <string name="err_invalid_input">Invalid input</string>
</resources>